Fix arrow alignment, conditionally show timeline event separators

--- a/src/sass/claims-status.scss
+++ b/src/sass/claims-status.scss
@@ -662,11 +662,11 @@ h1:focus {
   }
 
   & + .down-arrow {
-    width: 0px;
+    width: 0;
     border-left: 0.6em solid transparent;
     border-right: 0.6em solid transparent;
     border-top: 1.2em solid $color-gray-lighter;
-    margin-top: -1em;
+    margin-top: -.9em;
     margin-left: 0.8em;
   }
 
